fixed typing error in html and css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- navigation bar -->
 
     <nav class="navbar">
-      <div><img class="logo" src="assets/icon-white.png" alt="logo" /></div>
+      <div><img class="logo" src="Assets-Site/icon-white.png" alt="logo" /></div>
       <ul class="ul-navbar">
         <li class="li-navbar"><a href="#" class="nav-link">Base</a></li>
         <li class="li-navbar"><a href="#about" class="nav-link">About</a></li>
@@ -56,11 +56,11 @@
           <picture>
             <source
               media="(max-width: 430px)"
-              srcset="assets/vader-small-responsive.png"
+              srcset="Assets-Site/vader-small-responsive.png"
             />
             <img
               class="vader-img"
-              src="assets/vader-small.png"
+              src="Assets-Site/vader-small.png"
               alt="darth vader"
             />
           </picture>
@@ -76,31 +76,31 @@
         </figure>
         <figure id="image-track">
           <img
-            src="assets/poster (3).jpeg"
+            src="Assets-Site/poster (3).jpeg"
             alt="poster1"
             class="image"
             id="poster"
           />
           <img
-            src="assets/poster (2).jpeg"
+            src="Assets-Site/poster (2).jpeg"
             alt="poster2"
             class="image"
             id="poster2"
           />
           <img
-            src="assets/poster (1).jpeg"
+            src="Assets-Site/poster (1).jpeg"
             alt="poster3"
             class="image"
             id="main-poster"
           />
           <img
-            src="assets/poster (4).jpeg"
+            src="Assets-Site/poster (4).jpeg"
             alt="poster4"
             class="image"
             id="poster4"
           />
           <img
-            src="assets/poster (5).jpeg"
+            src="Assets-Site/poster (5).jpeg"
             alt="poster5"
             class="image"
             id="poster5"
@@ -125,22 +125,22 @@
             <div class="slider">
               <img
                 id="slide-1"
-                src="assets/carousel (1).png"
+                src="Assets-Site/carousel (1).png"
                 alt="starwars scenery battleships"
               />
               <img
                 id="slide-2"
-                src="assets/carousel (2).jpg"
+                src="Assets-Site/carousel (2).jpg"
                 alt="starwars scenery battleship with planet behind it"
               />
               <img
                 id="slide-3"
-                src="assets/carousel (3).jpg"
+                src="Assets-Site/carousel (3).jpg"
                 alt="starwars scenery AT-AT with nature"
               />
               <img
                 id="slide-4"
-                src="assets/carousel (4).jpg"
+                src="Assets-Site/carousel (4).jpg"
                 alt="starwars scenery naboo planet"
               />
             </div>
@@ -247,7 +247,7 @@
     <!-- footer -->
     <footer>
       <p class="p-footer">Copyright © 2023</p>
-      <img class="logo" src="assets/icon-white.png" alt="logo" />
+      <img class="logo" src="Assets-Site/icon-white.png" alt="logo" />
     </footer>
     <script src="script.js"></script>
   </body>
